# open-source-streaming-service

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.web  README.md  docker-compose.yml
AI-security-service/: .coverage  GTM.md  HN_LAUNCH_CONTENT.md  KREBS_BRIEFING.md  PRESS_PITCHES.md  SECURITY-FIX-all-ssh.md  SECURITY-FIX-ctv-scraper.md  SECURITY-FIX-encoding-intel.md  SECURITY-FIX-personal-assistant.md  SECURITY-FIX-startup-tracker.md  SECURITY-FIX-streaming-finder.md  SECURITY-FIX-trading-bot.md  conftest.py  pyproject.toml  security-report-2026-04-12.md  userdata.sh  ~$EBS_BRIEFING.md
AI-security-service/scanner/: admin.py  advanced.py  ai_triage.py  app.py  blog_posts.py  crawl.py  daily_digest.py  mcp_server.py  monitor_cron.py  notifications.py  security.py  weekly_scan.py
AI-security-service/scanner/commands/: security-scan.md
AI-security-service/scanner/tests/: conftest.py  test_admin.py  test_advanced.py  test_ai.py  test_ai_triage.py  test_api.py  test_audit_fixes.py  test_auth.py  test_billing.py  test_cancel_scan.py  test_concurrency.py  test_coverage_gaps.py  test_crawl.py  test_crons.py  test_db.py  test_e2e_browser.py  test_extended_scans.py  test_integration.py  test_mcp.py  test_notifications.py  test_openapi_audit.py  test_per_domain_scan.py  test_platforms.py  test_remediation.py  test_scanners.py  test_security.py  test_target_history.py  test_v1_api.py
AI-security-service/scripts/: deploy.sh  pre-commit-hook.sh
backend/: go.mod  go.sum
content/: catalog.json  encoding_jobs.txt  playlist.txt  streams.txt
vidaa/: config.xml  (+3 more)
(+77 files in other folders)
